[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/UI/Chat.gd" type="Script" id=1]
[ext_resource path="res://Styles/Main.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/UI/PanelBeige.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/PanelBrown.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Hardpixel.otf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id=2]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 5 )

[node name="Chat" type="Control"]
focus_mode = 1
script = ExtResource( 1 )

[node name="ChatWindow" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 477.0
margin_right = 201.0
margin_bottom = 567.0
theme = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="InputField" type="LineEdit" parent="."]
margin_left = 5.0
margin_top = 572.0
margin_right = 200.0
margin_bottom = 597.0
focus_mode = 1
theme = ExtResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
focus_mode = 1
caret_blink = true
[connection signal="text_entered" from="InputField" to="." method="_on_InputField_text_entered"]
